<resources>
    <string name="app_name">Мамаев Игорь</string>
    <string name="red_btn">RED</string>
    <string name="green_btn">GREEN</string>
    <string name="hint_mobile_phone_et">Мобильный телефон</string>
    <string name="phone_num">8 800 555 10 10</string>
    <string name="hint_e_mail_et">E-mail</string>
    <string name="e_mail">igor@gmail.com</string>
    <string name="hint_vk_et">Профиль VK</string>
    <string name="vk_login">mamaev_igor</string>
    <string name="hint_repo_et">Репозитарий</string>
    <string name="repo">github.com/iamigormamaev/DevIntensive</string>
    <string name="hint_about_me_et">О себе</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="score_reit_5">5</string>
    <string name="score_reit_0">0</string>
    <string name="score_description_rating">Рейтинг</string>
    <string name="score_description_lines_code">Написано строк кода</string>
    <string name="score_description_projects">Проектов</string>
    <string name="drawer_menu_my_profile">Мой профиль</string>
    <string name="drawer_menu_team">Команда</string>
    <string name="drawer_header_user_name">Мамаев Игорь</string>
    <string name="drawer_header_mail">my@mail.ru</string>
    <string name="change_user_photo">Изменить фото профиля</string>
    <string name="user_profile.dialog_galery">Загрузить из галереи</string>
    <string name="user_profile.dialog_make_photo">Сделать снимок</string>
    <string name="cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
    <string name="user_profile_choose_message">выберите фото</string>
    <string name="login_title">ВОЙТИ</string>
    <string name="login_forgot_password">Забыли пароль?</string>
    <string name="hint_login">E-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="need_to_permission">Для корректной работы необходимо дать требуемые разрешения</string>
    <string name="give_permission">Разрешить</string>

    <string name="ff_regular">sans-serif</string>
    <string name="ff_medium">sans-serif-medium</string>
    <string name="view_profile">Просмотр</string>
    <string name="first_name_second_name">Фамилия Имя</string>
    <string name="user_search">Поиск пользователя</string>
</resources>
